.provarCaches/00D4P000000xR5ZUAU/objects/Flosum__Patch__c.object
<CustomObject>
    <fields>
        <fullName>Flosum__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Flosum__Inherited_From_Patch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inherited From Patch</label>
        <referenceTo>Flosum__Patch__c</referenceTo>
        <relationshipLabel>Deployments</relationshipLabel>
        <relationshipName>Patches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flosum__Is_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flosum__Order__c</fullName>
        <label>Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flosum__Owner_Name__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;+ OwnerId , Owner:User.FirstName +&apos; &apos;+ Owner:User.LastName, &apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Total_Destructive_Items__c</fullName>
        <label>Total Destructive Items</label>
        <summaryForeignKey>Flosum__Destructive_Manifest__c.Flosum__Patch__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Flosum__Total_Items__c</fullName>
        <label>Total Items in Deployment</label>
        <summaryForeignKey>Flosum__Patch_Manifest__c.Flosum__Patch__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Flosum__Total_Items_in_Patch_Repository__c</fullName>
        <label>Total Items in Deployment (Repository)</label>
        <summaryForeignKey>Flosum__Repository_Manifest__c.Flosum__Patch__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Flosum__Total_Items_in_Patch__c</fullName>
        <label>Total Items in Deployment (Deprecated)</label>
        <summaryForeignKey>Flosum__Manifest__c.Flosum__Patch__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Flosum__TransactionId__c</fullName>
        <externalId>true</externalId>
        <label>TransactionId</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>Deployment</label>
    <listViews>
        <fullName>Flosum__All</fullName>
        <columns>NAME</columns>
        <columns>Flosum__Total_Items__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Deployment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deployments</pluralLabel>
    <recordTypes>
        <fullName>Flosum__PatchManifest</fullName>
        <active>true</active>
        <label>PatchManifest</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__Repository</fullName>
        <active>true</active>
        <label>Repository</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__Snapshot</fullName>
        <active>true</active>
        <label>Snapshot</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>